.73 Wizard.js refactored to wizardjs.php

--- a/future.html
+++ b/future.html
@@ -27,8 +27,29 @@
     <OL type=a>
     <LI>Dumper security (done)
     <LI>Validate same IP address (done)
-    <LI><font color=blue>Git (recreate project, try commit with .gitignore in place)
-    <LI>Refactor class-related JS stuff to PHP
+    <LI>Git (done)
+    <LI><font color=blue>Refactor class-related JS stuff to PHP
+	<UL>
+	<LI>Wizarddev.js to big echo'ed PHP (done)
+	<LI>Remove include w.js (done)
+	<LI>Include to blow it in (done)
+	<LI>Copy stuff to class functions (done)
+	<LI>Call class functions (done)
+	<LI>Refactor repetitive code in OpenWizard (done)
+	<LI><font color=red>Letter match wizard--is ^ in the right place?</font>
+	<LI>Move true utility to utilitydev & rest to form*+
+	<LI>utilitydev.js DQ to SQ to big echo'ed PHP (except true utility)
+	<LI>Remove include u.js
+	<LI>Call function to blow it in*
+	<LI>Copy stuff to class functions*
+	<LI>Call class functions and remove boring stuff*+
+	<LI>Update vup
+	<LI>Hints to class functions*+
+	<LI>Whether we enable wizard button uses class function*+
+	<LI>Look for and resolve duplicate createElement shortcuts*+
+	<LI>Pull out stuff from consdev.php to get it under 20K*+ & update vup
+	</UL>
+    <LI>Convert small non-PHP stuff near top of searchdev.php to echos
     <LI>Use ?? to replace some issets</font>
     <LI>SQL timeout https://stackoverflow.com/questions/415905/how-to-set-a-maximum-execution-time-for-a-mysql-query/23319195
     <LI><font color=blue>Github</font>
