.73 Fix problem of ^ in wrong place

--- a/future.html
+++ b/future.html
@@ -35,8 +35,8 @@
 	<LI>Include to blow it in (done)
 	<LI>Copy stuff to class functions (done)
 	<LI>Call class functions (done)
-	<LI>Refactor repetitive code in OpenWizard (done)
-	<LI><font color=red>Letter match wizard--is ^ in the right place?</font>
+	<LI>Refactor repetitive code in OpenWizard (done)+
+	<LI>Letter match wizard--is ^ in the right place?+
 	<LI>Move true utility to utilitydev & rest to form*+
 	<LI>utilitydev.js DQ to SQ to big echo'ed PHP (except true utility)
 	<LI>Remove include u.js
@@ -133,14 +133,15 @@
 	<LI>Session timeout (defaults to an hour)
   </UL>
   <LI>1.02 Track queries
-  <LI>1.03 Split database (constant words one and mutile one)
-  <LI>1.04 Bottom ribbon
+  <LI>1.03 Fix some bugs, including UI weaknesses
+  <LI>1.04 Split database (constant words one and mutile one)
+  <LI>1.05 Bottom ribbon
   <UL>
 	<LI>Contact Us link
 	<LI>copyright notice
 	<LI>Help: search, features, account types, known issues & future plans
   </UL>
-  <LI>1.05 Self-service account management
+  <LI>1.06 Self-service account management
   <UL>
 	<LI>Create account (easy choice among gmail, outlook, yahoo, hotmail, oberlin.edu)
 	<LI>Confirm e-mail address
@@ -152,8 +153,11 @@
 	<LI>EULA
 	<LI>robot detection
   </UL>
-  <LI>1.06 FB page
-  <LI>1.07 Bug tracker with voting for premium+ users
+  <LI>1.07 Web 2.0
+  <UL>
+    <LI>FB page
+    <LI>Bug tracker with voting for premium+ users
+  </UL>
   <LI>1.08 Accepting payment (discount for active NPL, MIT Hunt, AlfHunt composers)
   <LI>1.09 Admin dashboard with transaction download & e-mail blast
   <LI><font color="#FFFFFF">9.99 </font>Actual release
