.73 Combine wizardjs.php into form.php

--- a/future.html
+++ b/future.html
@@ -36,8 +36,8 @@
 	<LI>Copy stuff to class functions (done)
 	<LI>Call class functions (done)
 	<LI>Refactor repetitive code in OpenWizard (done)+
-	<LI>Letter match wizard--is ^ in the right place?+
-	<LI>Move true utility to utilitydev & rest to form*+
+	<LI>Letter match wizard--is ^ in the right place? (done)+
+	<LI>Move wizard.php to form+
 	<LI>utilitydev.js DQ to SQ to big echo'ed PHP (except true utility)
 	<LI>Remove include u.js
 	<LI>Call function to blow it in*
