.73 utilitydev.js to big echo'ed PHP

--- a/future.html
+++ b/future.html
@@ -37,12 +37,11 @@
 	<LI>Call class functions (done)
 	<LI>Refactor repetitive code in OpenWizard (done)+
 	<LI>Letter match wizard--is ^ in the right place? (done)+
-	<LI>Move wizard.php to form+
-	<LI>utilitydev.js DQ to SQ to big echo'ed PHP (except true utility)
-	<LI>Remove include u.js
-	<LI>Call function to blow it in*
-	<LI>Copy stuff to class functions*
+	<LI>Move wizard.php to form (done)+
+	<LI>utilitydev.js to big echo'ed PHP (except true utility)*
+	<LI>Copy stuff to class functions (but don't do other !!// things)*
 	<LI>Call class functions and remove boring stuff*+
+	<LI>Address any //!! in utilitydev & form*+, plus basic-->simple
 	<LI>Update vup
 	<LI>Hints to class functions*+
 	<LI>Whether we enable wizard button uses class function*+
