--- a/future.html
+++ b/future.html
@@ -38,10 +38,9 @@
 	<LI>Refactor repetitive code in OpenWizard (done)+
 	<LI>Letter match wizard--is ^ in the right place? (done)+
 	<LI>Move wizard.php to form (done)+
-	<LI>utilitydev.js to big echo'ed PHP (except true utility)*
-	<LI>Copy stuff to class functions (but don't do other !!// things)*
-	<LI>Call class functions and remove boring stuff*+
-	<LI>Address any //!! in utilitydev & form*+, plus basic-->simple
+	<LI>utilitydev.js to big echo'ed PHP (except true utility) (done)+
+	<LI>Move stuff to class functions //!@, call class functions and remove boring stuff (done but not *+)
+	<LI>Address any //!! in utilitydev & form*+, plus "basic"-->"simple"
 	<LI>Update vup
 	<LI>Hints to class functions*+
 	<LI>Whether we enable wizard button uses class function*+
