--- a/future.html
+++ b/future.html
@@ -39,8 +39,9 @@
 	<LI>Letter match wizard--is ^ in the right place? (done)+
 	<LI>Move wizard.php to form (done)+
 	<LI>utilitydev.js to big echo'ed PHP (except true utility) (done)+
-	<LI>Move stuff to class functions //!@, call class functions and remove boring stuff (done but not *+)
-	<LI>Address any //!! in utilitydev & form*+, plus "basic"-->"simple"
+	<LI>Move stuff to class functions //!@, call class functions and remove boring stuff (done) +
+	<LI>Address any //!! in utilitydev (needed) & form (done)+
+	<LI>"basic"-->"simple" +
 	<LI>Update vup
 	<LI>Hints to class functions*+
 	<LI>Whether we enable wizard button uses class function*+
