.73 Hints and whether we enable wizard button use class functions

--- a/future.html
+++ b/future.html
@@ -39,12 +39,10 @@
 	<LI>Letter match wizard--is ^ in the right place? (done)+
 	<LI>Move wizard.php to form (done)+
 	<LI>utilitydev.js to big echo'ed PHP (except true utility) (done)+
-	<LI>Move stuff to class functions //!@, call class functions and remove boring stuff (done) +
-	<LI>Address any //!! in utilitydev (needed) & form (done)+
-	<LI>"basic"-->"simple" +
-	<LI>Update vup
-	<LI>Hints to class functions*+
-	<LI>Whether we enable wizard button uses class function*+
+	<LI>Move stuff to class functions //!@, call class functions and remove boring stuff (done)+
+	<LI>Address any //!! in utilitydev (done) & form (done)+
+	<LI>Update vup (not much, done)
+	<LI>Hints and whether we enable wizard button uses class function+
 	<LI>Look for and resolve duplicate createElement shortcuts*+
 	<LI>Pull out stuff from consdev.php to get it under 20K*+ & update vup
 	</UL>
