.73 Always use createElement shortcuts and add radio values

--- a/future.html
+++ b/future.html
@@ -42,8 +42,8 @@
 	<LI>Move stuff to class functions //!@, call class functions and remove boring stuff (done)+
 	<LI>Address any //!! in utilitydev (done) & form (done)+
 	<LI>Update vup (not much, done)
-	<LI>Hints and whether we enable wizard button uses class function+
-	<LI>Look for and resolve duplicate createElement shortcuts*+
+	<LI>Hints and whether we enable wizard button uses class function (done)+
+	<LI>Always use createElement shortcuts and add radio values*+
 	<LI>Pull out stuff from consdev.php to get it under 20K*+ & update vup
 	</UL>
     <LI>Convert small non-PHP stuff near top of searchdev.php to echos
