.73 Convert small non-PHP stuff near top of searchdev.php to echos

--- a/future.html
+++ b/future.html
@@ -28,7 +28,7 @@
     <LI>Dumper security (done)
     <LI>Validate same IP address (done)
     <LI>Git (done)
-    <LI><font color=blue>Refactor class-related JS stuff to PHP
+    <LI>Refactor class-related JS stuff to PHP (<B>all done</B>)
 	<UL>
 	<LI>Wizarddev.js to big echo'ed PHP (done)
 	<LI>Remove include w.js (done)
@@ -43,10 +43,10 @@
 	<LI>Address any //!! in utilitydev (done) & form (done)+
 	<LI>Update vup (not much, done)
 	<LI>Hints and whether we enable wizard button uses class function (done)+
-	<LI>Always use createElement shortcuts and add radio values*+
-	<LI>Pull out stuff from consdev.php to get it under 20K*+ & update vup
+	<LI>Always use createElement shortcuts and add radio values (done)+
+	<LI>Pull out stuff from consdev.php to get it under 20K+ & update vup (done)
 	</UL>
-    <LI>Convert small non-PHP stuff near top of searchdev.php to echos
+    <LI><font color=blue>Convert small non-PHP stuff near top of searchdev.php to echos
     <LI>Use ?? to replace some issets</font>
     <LI>SQL timeout https://stackoverflow.com/questions/415905/how-to-set-a-maximum-execution-time-for-a-mysql-query/23319195
     <LI><font color=blue>Github</font>
