.73 Use ?? to replace some issets

--- a/future.html
+++ b/future.html
@@ -46,11 +46,15 @@
 	<LI>Always use createElement shortcuts and add radio values (done)+
 	<LI>Pull out stuff from consdev.php to get it under 20K+ & update vup (done)
 	</UL>
-    <LI><font color=blue>Convert small non-PHP stuff near top of searchdev.php to echos
-    <LI>Use ?? to replace some issets</font>
+    <LI>Convert small non-PHP stuff near top of searchdev.php to echos (done)
+    <LI><font color=blue>Use ?? to replace some issets</font> (done; needs test and git?)
+    <LI><font color=red>Fix problem--MORE doesn't work</font>
     <LI>SQL timeout https://stackoverflow.com/questions/415905/how-to-set-a-maximum-execution-time-for-a-mysql-query/23319195
-    <LI><font color=blue>Github</font>
-    </OL>
+    <LI><font color=blue>Github
+    <LI>Add reverse indexes to word/entry and to category</font>
+    <LI>Look at performance changing some LIKEs to BETWEENs*+
+    <LI>Show most popular categories in lookup
+  </OL>
   <LI>0.74 Wiktionary
     <OL type=a>
     <LI>Create loader
@@ -108,16 +112,16 @@
     <LI>Bing
     <LI>Yahoo
     <LI>nGram viewer
+    <LI>IMDB
     <LI>custom
     </UL>
   <LI>0.93 Display letters only
   <LI>0.94 Number of answers per page
-  <LI>0.95 Answers in anagram, bank, length, subword, weight order
+  <LI>0.95 Answers in anagram, bank, length, subword, weight, popularity [# incoming links] order
   <LI>0.96 Force upper/lower case
   <LI>0.97 Fixed pitch font
   <LI>0.98 Multiple hits per line
   <LI>0.99 Show subwords, weights, etc.
-  <LI>0.9A Show number of incoming links
   </UL>
 <LI>1.0 Public release
 <UL>
