.73 Show most popular categories in lookup

--- a/future.html
+++ b/future.html
@@ -9,19 +9,19 @@
 <UL>
 <LI>0.7 Major expansion of word list
   <UL>
-  <LI>0.72 Content search (text & categories)
+  <LI>0.72 Content search (text & categories) (<B>all done</B>)
     <OL type=a>
-    <LI>Classes for word lists (done)
-    <LI>Text search prompt (done)
-    <LI>Text search dummy implementation in class (done)
-    <LI>Actual search -- includes wildcards, @#&, etc. (done)
-    <LI>Corpus & flags restore value (done)
-    <LI>Corpus criteria restore value (done)
-    <LI>Regex search (done)
-    <LI>Cache grab (done)
-    <LI>Page size (done)
-    <LI>Limit number of pages searched and allow restart/continue (done)
-    <LI>Category search (done)
+    <LI>Classes for word lists
+    <LI>Text search prompt
+    <LI>Text search dummy implementation in class
+    <LI>Actual search -- includes wildcards, @#&, etc.
+    <LI>Corpus & flags restore value
+    <LI>Corpus criteria restore value
+    <LI>Regex search
+    <LI>Cache grab
+    <LI>Page size
+    <LI>Limit number of pages searched and allow restart/continue
+    <LI>Category search
     </OL>
   <LI>0.73 Miscellaneous internal
     <OL type=a>
@@ -30,28 +30,27 @@
     <LI>Git (done)
     <LI>Refactor class-related JS stuff to PHP (<B>all done</B>)
 	<UL>
-	<LI>Wizarddev.js to big echo'ed PHP (done)
-	<LI>Remove include w.js (done)
-	<LI>Include to blow it in (done)
-	<LI>Copy stuff to class functions (done)
-	<LI>Call class functions (done)
-	<LI>Refactor repetitive code in OpenWizard (done)+
-	<LI>Letter match wizard--is ^ in the right place? (done)+
-	<LI>Move wizard.php to form (done)+
-	<LI>utilitydev.js to big echo'ed PHP (except true utility) (done)+
-	<LI>Move stuff to class functions //!@, call class functions and remove boring stuff (done)+
-	<LI>Address any //!! in utilitydev (done) & form (done)+
+	<LI>Wizarddev.js to big echo'ed PHP
+	<LI>Remove include w.js
+	<LI>Include to blow it in
+	<LI>Copy stuff to class functions
+	<LI>Call class functions
+	<LI>Refactor repetitive code in OpenWizard+
+	<LI>Letter match wizard--is ^ in the right place?+
+	<LI>Move wizard.php to form+
+	<LI>utilitydev.js to big echo'ed PHP (except true utility)+
+	<LI>Move stuff to class functions //!@, call class functions and remove boring stuff+
+	<LI>Address any //!! in utilitydev & form+
 	<LI>Update vup (not much, done)
-	<LI>Hints and whether we enable wizard button uses class function (done)+
-	<LI>Always use createElement shortcuts and add radio values (done)+
-	<LI>Pull out stuff from consdev.php to get it under 20K+ & update vup (done)
+	<LI>Hints and whether we enable wizard button uses class function+
+	<LI>Always use createElement shortcuts and add radio values+
+	<LI>Pull out stuff from consdev.php to get it under 20K+ & update vup
 	</UL>
     <LI>Convert small non-PHP stuff near top of searchdev.php to echos (done)
-    <LI><font color=blue>Use ?? to replace some issets</font> (done; needs test and git?)
-    <LI><font color=red>Fix problem--MORE doesn't work</font>
-    <LI>SQL timeout https://stackoverflow.com/questions/415905/how-to-set-a-maximum-execution-time-for-a-mysql-query/23319195
-    <LI><font color=blue>Github
-    <LI>Add reverse indexes to word/entry and to category</font>
+    <LI>Use ?? to replace some issets (done)
+    <LI><strike>SQL timeout https://stackoverflow.com/questions/415905/how-to-set-a-maximum-execution-time-for-a-mysql-query/23319195</strike> Oh well, doesn't work
+    <LI>Github (done)
+    <LI><font color=blue>Add reverse indexes to word/entry and to category</font>
     <LI>Look at performance changing some LIKEs to BETWEENs*+
     <LI>Show most popular categories in lookup
   </OL>
