--- a/future.html
+++ b/future.html
@@ -52,8 +52,7 @@
     <LI>Github (done)
     <LI>Add reverse indexes to word/entry and to category (done)
     <LI>Show most popular categories in lookup (done)
-    <LI>Failure: <A HREF="http://www.8wheels.org/wordsearch/searchdev.php?simple=off&pattern=chriscole*&anyorder=on&query2=%2F%5Bchrisole%5D%7B9%7D%2F&radio2=&count=2&sessionkey=tvjc9pyym%2C*b&level=3&minlen=11&maxlen=21&single=on&phrase=on&corpus1=on&corpus2=on&count2=0&corpus87=on&morecbx=+corpus1+corpus2+c2flagR+corpus87&type=dev&version=0.73b">Words with CHRIS COLE scrambled</A>
-    <LI>Look at performance changing some LIKEs to BETWEENs*+
+    <LI>Look at performance changing some LIKEs to BETWEENs*+ (pre*s is 14.227 with LIKE; 58714 rows via word_four)
     <LI>See what is actually a reasonable limit on the number of rows
   </OL>
   <LI>0.74 Wiktionary
