--- a/future.html
+++ b/future.html
@@ -56,24 +56,23 @@
     <LI>See what is actually a reasonable limit on the number of rows: 4K/second, so 80K, 1M
     <LI>Modify script to use $type, not hard-coded DEV when calling catsuggest; also update vup
   </OL>
-  <LI>0.74 Wiktionary
+  <LI>0.74 Wiktionary <B>all done</B> except for running loader
     <OL type=a>
     <LI>Loader
       <UL>
-      <LI>Create loader (done)
-      <LI>Load categories (done)
-      <LI>Flag foreign-only words (done)
-      <LI>Combine with wikipedia to one PHP (done)
+      <LI>Create loader
+      <LI>Load categories
+      <LI>Flag foreign-only words
+      <LI>Combine with wikipedia to one PHP
       <LI>Don't flag redirects as foreign [and update existing ones]
-      <LI>testing--jump to Alan (in progress), then restart from !ah?u once we get to Am
       </UL>
-    <LI>Run loader to 500K words, then resume <A HREF="http://www.8wheels.org/wordsearch/addwikipedia.php?limit=500&from=Sir_John_Meade%2C_1st_Baronet&corpus=2">Wikipedia load</A>
-    <LI>Add to corpus table and flag table (done)
+    <LI>Run loader to 500K words (<A HREF="http://8wheels.org/wordsearch/dumper.php?sql=select+corpus_ID%2C+count%28*%29+from+entry+group+by+corpus_id&sessionkey=d0n8a6%3Cu%24e6h">check here</A>), then resume <A HREF="http://www.8wheels.org/wordsearch/addwikipedia.php?limit=500&from=Sir_John_Meade%2C_1st_Baronet&corpus=2">Wikipedia load</A>
+    <LI>Add to corpus table and flag table 
     <LI><strike>Enable searches, with foreign checkbox </strike> (not needed)
     <LI><strike>Link to results</strike> (not needed)
-    <LI>Remove Gettysburg & Featured
-    <LI>Filter by content (text & regex)
-    <LI>Filter by category (update autosuggest to pass in corpus)
+    <LI>Remove Gettysburg & Featured 
+    <LI><strike>Filter by content (text & regex)</strike> (not needed)
+    <LI>Filter by category (update autosuggest to pass in corpus) 
     <LI><strike>Filter by language</strike> (use category)
     <LI><strike>Handle hits in both word lists</strike> (not needed)
     <LI><font color=blue>Release</font>
@@ -202,6 +201,11 @@
 </LL>
 <!-- Release process
 * Test
+* Increment version number
 * vup
+* Copy everything to network
+* Retest
+* Tell everyone
+* If .75, remove archive from vup
 -->
 </BODY>
