.74k Wiktionary and capitalization

--- a/utility/dumper.html
+++ b/utility/dumper.html
@@ -7,8 +7,9 @@
 <H2>SQL Dump</H2>
 <form name="dump" action="dumper.php" id="dump"
    method="get">
-SQL: <input type=text name=sql placeholder="SELECT..." 
+SQL: <input type=text name=sql placeholder="SELECT..." />
 <br>
+Security key: <input type=text name=sessionkey />
 <input type="submit" value="Submit" id="xxx"/>
 </form>
 </BODY>
