--- a/future.html
+++ b/future.html
@@ -56,7 +56,7 @@
     <LI>See what is actually a reasonable limit on the number of rows: 4K/second, so 80K, 1M
     <LI>Modify script to use $type, not hard-coded DEV when calling catsuggest; also update vup
   </OL>
-  <LI>0.74 Wiktionary <B>all done</B> except for running loader
+  <LI>0.74 Wiktionary <B>all done</B> except for running loader and step K
     <OL type=a>
     <LI>Loader
       <UL>
@@ -66,7 +66,7 @@
       <LI>Combine with wikipedia to one PHP
       <LI>Don't flag redirects as foreign [and update existing ones]
       </UL>
-    <LI>Run loader to 500K words (<A HREF="http://8wheels.org/wordsearch/dumper.php?sql=select+corpus_ID%2C+count%28*%29+from+entry+group+by+corpus_id&sessionkey=d0n8a6%3Cu%24e6h">check here</A>), then resume <A HREF="http://www.8wheels.org/wordsearch/addwikipedia.php?limit=500&from=Sir_John_Meade%2C_1st_Baronet&corpus=2">Wikipedia load</A>
+    <LI>Run loader to end, then resume <A HREF="http://www.8wheels.org/wordsearch/addwikipedia.php?limit=500&from=Sir_John_Meade%2C_1st_Baronet&corpus=2">Wikipedia load</A>
     <LI>Add to corpus table and flag table 
     <LI><strike>Enable searches, with foreign checkbox </strike> (not needed)
     <LI><strike>Link to results</strike> (not needed)
@@ -75,7 +75,15 @@
     <LI>Filter by category (update autosuggest to pass in corpus) 
     <LI><strike>Filter by language</strike> (use category)
     <LI><strike>Handle hits in both word lists</strike> (not needed)
+    <LI><font color=#FF00FF>But wait!  Capitalized and not.</font>
+<!--
+Git
+-->
     <LI><font color=blue>Release</font>
+<!--
+pull stuff from desktop
+-->
+    <LI>Later, <A HREF="http://www.8wheels.org/wordsearch/addwikipedia.php?limit=500&classname=wiktionary&from=Plissees&corpus=3">resume uppercase</A>
     </OL>
   <LI>0.75 User-specific word lists
     <OL type=a>
@@ -87,7 +95,7 @@
     <LI>Share
     <LI>Access shared with autocomplete lists https://www.upwork.com/hiring/development/creating-autocomplete-functionality-with-php-and-mysql/
     <LI>Menu: help, user, manage lists, manage queries
-    <LI>Manage (delete, rename, edit, share)
+    <LI>Manage (delete, rename, edit, share, assign URL)
     </OL>
   <LI>0.76 Other search capabilities
     <OL type=a>
@@ -130,6 +138,7 @@
   <LI>0.97 Fixed pitch font
   <LI>0.98 Multiple hits per line
   <LI>0.99 Show subwords, weights, etc.
+  <LI>0.9A Use italics, bold, color, to differentiate corpuses
   </UL>
 <LI>1.0 Public release
 <UL>
@@ -184,6 +193,7 @@
 <LI>Validating corpus criteria
 <LI>Custom SQL with PW. (converted to lowercase)
 <LI>Signon to display message based on code
+<LI>After timeout, error message appears stating that the SQL server has gone away
 </LL>
 <H2>Ideas</H2>
 <LL>
@@ -204,6 +214,7 @@
 * Increment version number
 * vup
 * Copy everything to network
+* git push
 * Retest
 * Tell everyone
 * If .75, remove archive from vup
