.74 correct count when removing corpus criterion

--- a/helpback.html
+++ b/helpback.html
@@ -69,9 +69,15 @@ ATLATL, BONBON, and TSETSE.  Use * to specify that the word has no matching lett
 <H4>Other Filters</H4>
 You can filter the final list of results with the minimum and maximum 
 length boxes.
+<H4>Source</H4>
+Wikipedia is currently the only functioning source.  The download is incomplete, about four million terms available out of maybe thirty million.  By default, redirects are not searched; most of these have little logological interest.
+<P>
+You can search the content of the Wikipedia pages of matching entries (but not currently of redirects), either for an ordinary pattern or a regular expression, just as for the original string.  For example, you can search for articles that match "*germany*" but the content does not match either "east" or "west".  You can also search by the size of the page.  Note that this feature may be slow, as the page content must be retrieved over the internet.  In this case, queries may time out and display only partial results with a "more" link.
+<P>
+Upcoming capability will allow search by categories.
 <H3>Versions</H3>
 The main page should be stable and functional.  There are links to go to 
-the previous version and the development version.
+the previous version and the beta version.
 <div class='disabled'>
 <H3>Not Working</H3>
 </div>
