.75 refactor security code

--- a/future.html
+++ b/future.html
@@ -79,11 +79,14 @@
     </OL>
   <LI>0.75 User-specific word lists
     <OL type=a>
-<!--
-pull stuff from desktop via dropbox to resume
--->
-    <LI>Save result as list
+    <LI>Save result as list (done)
+    <LI>Move addmain to main folder (done)
     <LI>Consolidate security checking
+<!--
+Asksave calls it
+Dosave calls it
+git
+-->
     <LI>Handle "more" feature
     <LI>Upload list
     <LI>Access saved
@@ -91,7 +94,7 @@ pull stuff from desktop via dropbox to resume
     <LI>Share
     <LI>Access shared with autocomplete lists https://www.upwork.com/hiring/development/creating-autocomplete-functionality-with-php-and-mysql/
     <LI>Menu: help, user, manage lists, manage queries
-    <LI>Manage (delete, rename, edit, share, assign URL)
+    <LI>Manage (delete, rename, edit, share, assign URL and parent word list)
     <LI>Release; add save stuff to vup
     </OL>
   <LI>0.76 Other search capabilities
