--- a/future.html
+++ b/future.html
@@ -81,13 +81,8 @@
     <OL type=a>
     <LI>Save result as list (done)
     <LI>Move addmain to main folder (done)
-    <LI>Consolidate security checking
-<!--
-Asksave calls it
-Dosave calls it
-git
--->
-    <LI>Handle "more" feature
+    <LI>Consolidate security checking (done)
+    <LI>Handle "more" feature (done)
     <LI>Upload list
     <LI>Access saved
     <LI>Limit to 5 for premium to 50K entries (2M characters), 20 for professional to 200K entries (20M characters))
