--- a/future.html
+++ b/future.html
@@ -83,13 +83,17 @@
     <LI>Move addmain to main folder (done)
     <LI>Consolidate security checking (done)
     <LI>Handle "more" feature (done)
-    <LI>Upload list
+    <LI>Upload list (done)
+    <LI>corpus index on entry
+<!--
+http://8wheels.org/wordsearch/dumper.php?sql=SELECT+A.name%2C+B.name+FROM+entry+A%2C+entry+B%2C+entry+X+WHERE+A.corpus_id+%3D+89+AND+B.corpus_id+%3D+89+AND+X.name+%3D+concat+%28A.name%2C+%27+%27%2C+B.name%29&sessionkey=e%3Cp9%3C-moaoml
+-->
     <LI>Access saved
     <LI>Limit to 5 for premium to 50K entries (2M characters), 20 for professional to 200K entries (20M characters))
     <LI>Share
     <LI>Access shared with autocomplete lists https://www.upwork.com/hiring/development/creating-autocomplete-functionality-with-php-and-mysql/
     <LI>Menu: help, user, manage lists, manage queries
-    <LI>Manage (delete, rename, edit, share, assign URL and parent word list)
+    <LI>Manage (delete, rename, edit, share, assign URL and parent word list); delete words (and clean up list 89)
     <LI>Release; add save stuff to vup
     </OL>
   <LI>0.76 Other search capabilities
