--- a/future.html
+++ b/future.html
@@ -89,12 +89,14 @@
     <LI>Menu (done)
     <LI>Manage
 	<UL>
-	<LI>Delete
+	<LI>Delete (done)
 	<LI>Rename
 	<LI>Properties: URL
 	<LI>Properties: parent word list
 	<LI>Share
 	<LI>Delete words (and clean up list 89)
+	<LI>Access shared
+	<LI>Defaults
 	</UL>
     <LI>List management help
     <LI>Review query help
