--- a/future.html
+++ b/future.html
@@ -90,7 +90,7 @@
     <LI>Manage
 	<UL>
 	<LI>Delete (done)
-	<LI>Rename
+	<LI>Rename (done)
 	<LI>Properties: URL
 	<LI>Properties: parent word list
 	<LI>Share
