.75i Word List properties

--- a/future.html
+++ b/future.html
@@ -91,6 +91,7 @@
 	<UL>
 	<LI>Delete (done)
 	<LI>Rename (done)
+	<LI>No left margin needed on subsidiary pages (done)
 	<LI>Properties: URL
 	<LI>Properties: parent word list
 	<LI>Share
@@ -102,7 +103,6 @@
     <LI>Review query help
     <LI>Access shared with autocomplete lists https://www.upwork.com/hiring/development/creating-autocomplete-functionality-with-php-and-mysql/
     <LI>Limit to 5 for premium to 50K entries (2M characters), 20 for professional to 200K entries (20M characters); message about general interest
-    <LI>No left margin needed on subsidiary pages
     <LI>Separate CSS by $type
     <LI>Look into retiring preserveinfo
     <LI>Release
