--- a/future.html
+++ b/future.html
@@ -92,12 +92,13 @@
 	<LI>Delete (done)
 	<LI>Rename (done)
 	<LI>No left margin needed on subsidiary pages (done)
-	<LI>Properties: URL
+	<LI>Properties: URL (done)
 	<LI>Properties: parent word list
 	<LI>Share
 	<LI>Delete words (and clean up list 89)
 	<LI>Access shared
 	<LI>Defaults
+	<LI>Carets in menu
 	</UL>
     <LI>List management help
     <LI>Review query help
