.75i Share user word list

--- a/future.html
+++ b/future.html
@@ -93,12 +93,15 @@
 	<LI>Rename (done)
 	<LI>No left margin needed on subsidiary pages (done)
 	<LI>Properties: URL (done)
-	<LI>Properties: parent word list
+	<LI>Properties: parent word list (done)
 	<LI>Share
+<!--
+Do
+-->
 	<LI>Delete words (and clean up list 89)
 	<LI>Access shared
 	<LI>Defaults
-	<LI>Carets in menu
+	<LI>Carets in menu (done)
 	</UL>
     <LI>List management help
     <LI>Review query help
