.75i e-mail on list share/delete

--- a/future.html
+++ b/future.html
@@ -94,18 +94,19 @@
 	<LI>No left margin needed on subsidiary pages (done)
 	<LI>Properties: URL (done)
 	<LI>Properties: parent word list (done)
-	<LI>Share
-<!--
-Do
--->
-	<LI>Delete words (and clean up list 89)
+	<LI>Share (done)
+	<LI>Delete words (done)
+	<LI><A HREF="https://www.w3schools.com/php/func_mail_mail.asp">E-mail sent</A> on shareand on deletion of shareds (done) 
+	<LI><font color=red>Fix category lookup UI</font>
+	<LI><font color=red>Share with hints don't work</font>
 	<LI>Access shared
+	<LI><font color=red>Don't show flag-based checkboxes on user lists 'like' Wiki*</font>
 	<LI>Defaults
 	<LI>Carets in menu (done)
+	<LI>Sanitize inputs
 	</UL>
-    <LI>List management help
-    <LI>Review query help
-    <LI>Access shared with autocomplete lists https://www.upwork.com/hiring/development/creating-autocomplete-functionality-with-php-and-mysql/
+    <LI>List management help (done)
+    <LI>Review query help: update for categories & Wiktionary; remove Not Working
     <LI>Limit to 5 for premium to 50K entries (2M characters), 20 for professional to 200K entries (20M characters); message about general interest
     <LI>Separate CSS by $type
     <LI>Look into retiring preserveinfo
@@ -156,6 +157,7 @@ Do
   </UL>
 <LI>1.0 Public release
 <UL>
+  <LI>Poll testers on features/bug fixes
   <LI>1.01 User settings
   <UL>
 	<LI>Start page
@@ -166,10 +168,13 @@ Do
   </UL>
   <LI>1.02 Track queries
   <LI>1.03 Fix some bugs, including UI weaknesses
-  <LI>1.04 Split database (constant words one and mutile one)
-  <LI>1.05 Bottom ribbon
   <UL>
-	<LI>Contact Us link
+    <LI>Use form for support e-mail
+  </UL>
+  <LI><strike>1.04 Split database (constant words one and mutile one)</strike>
+  <LI>1.05 Side ribbon
+  <UL>
+	<LI>Contact Us link (done)
 	<LI>copyright notice
 	<LI>Help: search, features, account types, known issues & future plans
   </UL>
@@ -207,7 +212,7 @@ Do
 <LI>Validating corpus criteria
 <LI>Custom SQL with PW. (converted to lowercase)
 <LI>Signon to display message based on code
-<LI>After timeout, error message appears stating that the SQL server has gone away
+<LI>After timeout, error message sometimes appears stating that the SQL server has gone away
 </LL>
 <H2>Ideas</H2>
 <LL>
@@ -233,9 +238,10 @@ Do
 * Tell everyone
 * If .75, remove archive from vup
 -->
-<!--
-<A HREF="http://www.8wheels.org/wordsearch/addwikipedia.php?limit=500&classname=wiktionary&from=Plissees&corpus=3">resume uppercase Wiktionary</A>
-<A HREF="http://www.8wheels.org/wordsearch/addwikipedia.php?limit=265&classname=wiktionary&from=antiliquor&corpus=3">resume lowercase Wiktionary</A>
-<A HREF="http://www.8wheels.org/wordsearch/addwikipedia.php?limit=500&classname=wikipedia&from=Sir_John_Meade%2C_1st_Baronet&corpus=2">Wikipedia load</A>
--->
+<H2>Restart downloads</H2>
+<UL>
+<LI><A HREF="http://www.8wheels.org/wordsearch/addwikipedia.php?limit=500&classname=wiktionary&from=Plissees&corpus=3">resume uppercase Wiktionary</A>
+<LI><A HREF="http://www.8wheels.org/wordsearch/addwikipedia.php?limit=265&classname=wiktionary&from=antiliquor&corpus=3">resume lowercase Wiktionary</A>
+<LI><A HREF="http://www.8wheels.org/wordsearch/addwikipedia.php?limit=500&classname=wikipedia&from=Sir_John_Meade%2C_1st_Baronet&corpus=2">Wikipedia load</A>
+</UL>
 </BODY>
