.75i fix category lookup UI

--- a/future.html
+++ b/future.html
@@ -98,10 +98,16 @@
 	<LI>Delete words (done)
 	<LI><A HREF="https://www.w3schools.com/php/func_mail_mail.asp">E-mail sent</A> on shareand on deletion of shareds (done) 
 	<LI><font color=red>Fix category lookup UI</font>
-	<LI><font color=red>Share with hints don't work</font>
+<!--
+Font and size
+* Go to library; check phone call list & bookstore
+* Git
+* E-mail
+-->
 	<LI>Access shared
-	<LI><font color=red>Don't show flag-based checkboxes on user lists 'like' Wiki*</font>
+	<LI><font color=red>Fix issues with user lists 'like' Wiki* (categories, flags)</font>
 	<LI>Defaults
+	<LI><font color=red>Share with hints don't work</font>
 	<LI>Carets in menu (done)
 	<LI>Sanitize inputs
 	</UL>
