--- a/future.html
+++ b/future.html
@@ -97,17 +97,11 @@
 	<LI>Share (done)
 	<LI>Delete words (done)
 	<LI><A HREF="https://www.w3schools.com/php/func_mail_mail.asp">E-mail sent</A> on shareand on deletion of shareds (done) 
-	<LI><font color=red>Fix category lookup UI</font>
-<!--
-Font and size
-* Go to library; check phone call list & bookstore
-* Git
-* E-mail
--->
-	<LI>Access shared
+	<LI>Fix category lookup UI (done)
+	<LI>Access shared (done)
 	<LI><font color=red>Fix issues with user lists 'like' Wiki* (categories, flags)</font>
-	<LI>Defaults
-	<LI><font color=red>Share with hints don't work</font>
+	<LI><strike>Defaults</strike>
+	<LI><font color=red>Collapsing 'Lists' hides Queries & Navigation</font>
 	<LI>Carets in menu (done)
 	<LI>Sanitize inputs
 	</UL>
@@ -174,10 +168,11 @@ Font and size
   </UL>
   <LI>1.02 Track queries
   <LI>1.03 Fix some bugs, including UI weaknesses
-  <UL>
+  <UL>1.04 Security
     <LI>Use form for support e-mail
+    <LI>Timeout and update session status
+    <LI>Split database (constant words one and mutile one)
   </UL>
-  <LI><strike>1.04 Split database (constant words one and mutile one)</strike>
   <LI>1.05 Side ribbon
   <UL>
 	<LI>Contact Us link (done)
