.75i Fix issues with user lists 'like' Wiki*

--- a/future.html
+++ b/future.html
@@ -99,11 +99,12 @@
 	<LI><A HREF="https://www.w3schools.com/php/func_mail_mail.asp">E-mail sent</A> on shareand on deletion of shareds (done) 
 	<LI>Fix category lookup UI (done)
 	<LI>Access shared (done)
-	<LI><font color=red>Fix issues with user lists 'like' Wiki* (categories, flags)</font>
+	<LI>Fix issues with user lists 'like' Wiki* (categories, flags) (done?)
 	<LI><strike>Defaults</strike>
 	<LI><font color=red>Collapsing 'Lists' hides Queries & Navigation</font>
 	<LI>Carets in menu (done)
 	<LI>Sanitize inputs
+	<LI><font color=red>Search page shows checks on both C and U, even if not both used</font>
 	</UL>
     <LI>List management help (done)
     <LI>Review query help: update for categories & Wiktionary; remove Not Working
@@ -116,6 +117,7 @@
     <OL type=a>
     <LI>Custom SQL: IJ or WHERE
     <LI>Enumeration
+    <LI><font color=blue>Modify addwikipedia to skip redirect from spelling error</font>
     <LI>Raw pattern/regex
     </OL>
   </UL>
@@ -243,6 +245,9 @@
 <UL>
 <LI><A HREF="http://www.8wheels.org/wordsearch/addwikipedia.php?limit=500&classname=wiktionary&from=Plissees&corpus=3">resume uppercase Wiktionary</A>
 <LI><A HREF="http://www.8wheels.org/wordsearch/addwikipedia.php?limit=265&classname=wiktionary&from=antiliquor&corpus=3">resume lowercase Wiktionary</A>
-<LI><A HREF="http://www.8wheels.org/wordsearch/addwikipedia.php?limit=500&classname=wikipedia&from=Sir_John_Meade%2C_1st_Baronet&corpus=2">Wikipedia load</A>
+<LI>Fix some early Wikitionary capitalization (see Alex*, for example)
+<LI>Fill in categories for first 5M on Wikipedia
+<LI>Get special characters for them too
+<LI>Delete "Redirect from spelling error" on Wikipedia
 </UL>
 </BODY>
