--- a/future.html
+++ b/future.html
@@ -99,7 +99,7 @@
 	<LI><A HREF="https://www.w3schools.com/php/func_mail_mail.asp">E-mail sent</A> on shareand on deletion of shareds (done) 
 	<LI>Fix category lookup UI (done)
 	<LI>Access shared (done)
-	<LI>Fix issues with user lists 'like' Wiki* (categories, flags) (done?)
+	<LI>Fix issues with user lists 'like' Wiki* (categories, flags) (done)
 	<LI><strike>Defaults</strike>
 	<LI><font color=red>Collapsing 'Lists' hides Queries & Navigation</font>
 	<LI>Carets in menu (done)
