.75i Search page shows checks on both C and U, even if not both used

--- a/future.html
+++ b/future.html
@@ -101,9 +101,9 @@
 	<LI>Access shared (done)
 	<LI>Fix issues with user lists 'like' Wiki* (categories, flags) (done)
 	<LI><strike>Defaults</strike>
-	<LI><font color=red>Collapsing 'Lists' hides Queries & Navigation</font>
+	<LI>Collapsing 'Lists' hides Queries & Navigation (done)
 	<LI>Carets in menu (done)
-	<LI>Sanitize inputs
+	<LI>Sanitize inputs (done)
 	<LI><font color=red>Search page shows checks on both C and U, even if not both used</font>
 	</UL>
     <LI>List management help (done)
