--- a/future.html
+++ b/future.html
@@ -64,7 +64,7 @@
     <LI>List management help (done)
     <LI>Review query help: update for categories & Wiktionary; remove Not Working (done)
     <LI>Limit to 5 for premium to 50K entries (2M characters), 20 for professional to 200K entries (20M characters); message about general interest (done)
-    <LI>Separate CSS by $type
+    <LI>Separate CSS by $type (done)
     <LI>Query may take too long (*yearwar at level 2)
     <LI>Look into retiring preserveinfo
     <LI>Release
