--- a/future.html
+++ b/future.html
@@ -65,8 +65,8 @@
     <LI>Review query help: update for categories & Wiktionary; remove Not Working (done)
     <LI>Limit to 5 for premium to 50K entries (2M characters), 20 for professional to 200K entries (20M characters); message about general interest (done)
     <LI>Separate CSS by $type (done)
-    <LI>Query may take too long (*yearwar at level 2)
-    <LI>Look into retiring preserveinfo
+    <LI>Query may take too long (*yearwar at level 2) (done)
+    <LI>Retire preserveinfo (done)
     <LI>Release
     </OL>
   <LI>0.76 Other search capabilities
