--- a/future.html
+++ b/future.html
@@ -30,7 +30,6 @@
     <LI><strike>Filter by language</strike> (use category)
     <LI><strike>Handle hits in both word lists</strike> (not needed)
     <LI>Capitalized and not
-    <LI><font color=blue>Release</font>
     </OL>
   <LI>0.75 User-specific word lists
     <OL type=a>
@@ -67,13 +66,18 @@
     <LI>Separate CSS by $type (done)
     <LI>Query may take too long (*yearwar at level 2) (done)
     <LI>Retire preserveinfo (done)
-    <LI>Release
+    <LI><font color=blue>Release</font>
+<!-- Release process
+* Tell everyone
+-->
     </OL>
   <LI>0.76 Other search capabilities
     <OL type=a>
+    <LI>Custom SQL with PW. (converted to lowercase)
     <LI>Custom SQL: IJ or WHERE
-    <LI>Enumeration
-    <LI><font color=blue>Modify addwikipedia to skip redirect from spelling error</font>
+    <LI>Improve word lookup GUI
+    <LI>Enumeration (digit # | [may enter as ' and convert] - sp * ?)
+    <LI>Hide corpus MORE in simple UI
     <LI>Raw pattern/regex
     </OL>
   </UL>
@@ -108,10 +112,10 @@
   <LI>0.94 Number of answers per page
   <LI>0.95 Answers in anagram, bank, length, subword, weight, popularity [# incoming links] order
   <LI>0.96 Force upper/lower case
-  <LI>0.97 Fixed pitch font
+  <LI>0.97 Choice of fonts
   <LI>0.98 Multiple hits per line
   <LI>0.99 Show subwords, weights, etc.
-  <LI>0.9A Use italics, bold, color, to differentiate corpuses
+  <LI>0.9A Use italics, bold, color to differentiate corpuses and flags
   </UL>
 <LI>1.0 Public release
 <UL>
@@ -169,7 +173,6 @@
 <LI>Required fields in wizard
 <LI>Text search on disambiguation pages
 <LI>Validating corpus criteria
-<LI>Custom SQL with PW. (converted to lowercase)
 <LI>Signon to display message based on code
 <LI>After timeout, error message sometimes appears stating that the SQL server has gone away
 </LL>
@@ -191,11 +194,10 @@
 * Test
 * Increment version number
 * vup
-* Copy everything to network
-* git push
+* Copy everything to network (with hide)
 * Retest
-* Tell everyone
-* If .75, remove archive from vup
+* git push
+* Tell everyone (just Eric Chaikin & Andy Latto unless .#0)
 -->
 <H2>Restart downloads</H2>
 <UL>
@@ -204,6 +206,7 @@
 <LI>Fix some early Wikitionary capitalization (see Alex*, for example)
 <LI>Fill in categories for first 5M on Wikipedia
 <LI>Get special characters for them too
+<LI><font color=blue>Modify addwikipedia to skip redirect from spelling error</font>
 <LI>Delete "Redirect from spelling error" on Wikipedia
 </UL>
 </BODY>
